syntax = "proto3";
package os;

import "protobuf/os/os.proto";

option go_package = "github.com/rickypai/web-template/api/protobuf/os";

service OSReader {
  rpc GetOneByID(GetOneByIDRequest) returns (GetOneByIDResponse) {}
  rpc GetManyByIDs(GetManyByIDsRequest) returns (GetManyByIDsResponse) {}
  rpc ListByCursor(ListByCursorRequest) returns (ListByCursorResponse) {}
  rpc ListByPage(ListByPageRequest) returns (ListByPageResponse) {}
  rpc ListByPrefix(ListByPrefixRequest) returns (ListByPrefixResponse) {}
}

message GetOneByIDRequest {
  int64 id = 1;
}

message GetOneByIDResponse {
  os.OS result = 1;
}

message GetManyByIDsRequest {
  repeated int64 ids = 1;
}

message GetManyByIDsResponse {
  repeated os.OS results = 1;
}

message ListByCursorRequest {
  int64 cursor = 1;

  int64 count = 2; // defaults to 20
}

message ListByCursorResponse {
  repeated os.OS results = 1;

  int64 cursor = 2;
}

message ListByPageRequest {
  int64 page = 1;

  int64 size = 2; // defaults to 20
}

message ListByPageResponse {
  repeated os.OS results = 1;

  int64 next_page = 2;

  int64 total_pages = 3;

  bool has_next = 4;
}

message ListByPrefixRequest {
  string prefix = 1;

  int64 count = 2; // defaults to 20
}

message ListByPrefixResponse {
  repeated os.OS results = 1;
}
